--- a/aboutMe.html
+++ b/aboutMe.html
@@ -58,6 +58,7 @@
                         <li>Friends</li>
                         <li>Hobbies</li> 
                     </ul>
+                    <button onclick="this.innerHTML=Date()">Clock</button>
                 </div>
             </div>
             <audio controls autoplay>
