--- a/work.html
+++ b/work.html
@@ -42,7 +42,7 @@
             <div class="slider-container">
                 <div class="slider-images">
                   <div class="slider-img">
-                    <img src="Image/sogo.png" alt="1" />
+                    <a href="https://www.sogo.com.my/"><img src="Image/sogo.png" alt="1" /></a>
                     <h1>SOGO</h1>
                     <div class="details">
                       <h2>SOGO</h2>
@@ -50,7 +50,7 @@
                     </div>
                   </div>
                   <div class="slider-img">
-                    <img src="Image/mamasab.png" alt="2" />
+                    <a href="https://www.mamasabworld.com/product-category/kek/"><img src="Image/mamasab.png" alt="2" /></a>
                     <h1>MAMASAB</h1>
                     <div class="details">
                       <h2>MAMASAB</h2>
@@ -65,7 +65,7 @@
                     </div>
                   </div>
                   <div class="slider-img">
-                    <img src="image\Chear Motor.jpg" alt="4" />
+                    <a href="https://www.mbdk.gov.my/ms"><img src="image\Chear Motor.jpg" alt="4" /></a>
                     <h1>CHEAR MOTOR</h1>
                     <div class="details">
                       <h2>CHEAR MOTOR</h2>
@@ -73,7 +73,7 @@
                     </div>
                   </div>
                   <div class="slider-img">
-                    <img src="image\MBDK.png" alt="5" />
+                    <a href="https://www.chearmotor.com/"><img src="image\MBDK.png" alt="5" /></a>
                     <h1>MBDK</h1>
                     <div class="details">
                       <h2>MBDK</h2>
@@ -149,4 +149,3 @@
 <script>
     document.getElementById("year").textContent = new Date().getFullYear();
 </script>
-</html>
