--- a/work.html
+++ b/work.html
@@ -65,7 +65,7 @@
                     </div>
                   </div>
                   <div class="slider-img">
-                    <a href="https://www.mbdk.gov.my/ms"><img src="image\Chear Motor.jpg" alt="4" /></a>
+                    <a href="https://www.chearmotor.com/"><img src="image\Chear Motor.jpg" alt="4" /></a>
                     <h1>CHEAR MOTOR</h1>
                     <div class="details">
                       <h2>CHEAR MOTOR</h2>
@@ -73,7 +73,7 @@
                     </div>
                   </div>
                   <div class="slider-img">
-                    <a href="https://www.chearmotor.com/"><img src="image\MBDK.png" alt="5" /></a>
+                    <a href="https://www.mbdk.gov.my/ms"><img src="image\MBDK.png" alt="5" /></a>
                     <h1>MBDK</h1>
                     <div class="details">
                       <h2>MBDK</h2>
