--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="btn" data-aos="zoom-out-left" data-aos-duration="1000" data-aos-delay="1300">
-                <a href="image\RESUME QOLBIE.pdf" download="Anna_Resume.pdf">
+                <a href="RESUME QOLBIE.pdf" download="Anna_Resume.pdf">
                     <button>My Resume</button>
                 </a>
             </div>
