--- a/work.html
+++ b/work.html
@@ -42,7 +42,7 @@
             <div class="slider-container">
                 <div class="slider-images">
                   <div class="slider-img">
-                    <a href="https://www.sogo.com.my/"><img src="Image/sogo.png" alt="1" /></a>
+                    <a href="https://www.sogo.com.my/"><img src="sogo.png" alt="1" /></a>
                     <h1>SOGO</h1>
                     <div class="details">
                       <h2>SOGO</h2>
