--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section>
         <div class="main-container">
             <div class="image" data-aos="zoom-in-right" data-aos-duration="2500">
-                <img src="image/na.png" alt="">
+                <img src="na.png" alt="">
             </div>
             <div class="content">
                 <h1 data-aos="fade-left" data-aos-duration="1000" data-aos-delay="800">Hey I'm <span>Anna</span></h1>
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="btn" data-aos="zoom-out-left" data-aos-duration="1000" data-aos-delay="1300">
-                <a href="image\RESUME QOLBIE.pdf" download="Anna_Resume.pdf">
+                <a href="RESUME QOLBIE.pdf" download="Anna_Resume.pdf">
                     <button>My Resume</button>
                 </a>
             </div>
