--- a/family.html
+++ b/family.html
@@ -50,18 +50,18 @@
 <body>
     <section>
         <div class="main-container">
-            <img src="image\Ayah.png" alt="my family">
+            <img src="Ayah.png" alt="my family">
         </div>
         <div class="main-container">
-            <img src="image/family.png" alt="my family">
+            <img src="family.png" alt="my family">
         </div>
         <div class="main-container">
-            <img src="image\Siblings.png" alt="my family">
+            <img src="Siblings.png" alt="my family">
         </div>
     </section>
     <br>
 <video width="320" height="240" controls class="center-video">
-    <source src="image\Girl December.MOV" type="video/mp4">
+    <source src="Girl December.MOV" type="video/mp4">
     <source src="movie.ogg" type="video/ogg">
     Your browser does not support the video tag.
   </video>
