--- a/aboutMe.html
+++ b/aboutMe.html
@@ -63,10 +63,10 @@
             </div>
             <audio controls autoplay>
                 <source src="Kembali Pulang.ogg" type="audio/ogg">
-                <source src="image\Kembali_Pulang_Suara_Kayu_feat._Feby_Putri.mp3" type="audio/mpeg">
+                <source src="Kembali_Pulang_Suara_Kayu_feat._Feby_Putri.mp3" type="audio/mpeg">
               </audio>
             <div class="image" data-aos="zoom-in-right" data-aos-duration="2500">
-                <img src="image/na photo.png" alt="">
+                <img src="na photo.png" alt="">
             </div>
         </div>
     </section>
