--- a/friends.html
+++ b/friends.html
@@ -53,15 +53,15 @@
             <h1>Friends Gallery</h1>
             <div class="gallery">
                 <input type="checkbox" >
-                <img src="image\afda, lyz, taro.jpg">
-                <img src="image\aisha, iqin.jpg">
-                <img src="image\ema.jpg">
-                <img src="image\anje.jpg">
-                <img src="image\eca.jpg">
-                <img src="image\zati.jpg">
-                <img src="image\nia.jpg">
-                <img src="image\kak mah.jpg">
-                <img src="image\aishah.jpg">
+                <img src="afda, lyz, taro.jpg">
+                <img src="aisha, iqin.jpg">
+                <img src="ema.jpg">
+                <img src="anje.jpg">
+                <img src="eca.jpg">
+                <img src="zati.jpg">
+                <img src="nia.jpg">
+                <img src="kak mah.jpg">
+                <img src="aishah.jpg">
             </div>
         </div>
     </section>
