--- a/hobbies.html
+++ b/hobbies.html
@@ -52,14 +52,14 @@
         <div class="main-container">
             <div class="gallery">
                 <input type="checkbox" >
-                <img src="image\Sky.jpg">
-                <img src="image\Cooking.jpg">
-                <img src="image\Eating food.jpg">
-                <img src="image\Watching drama.jpg">
-                <img src="image\Music.jpg">
-                <img src="image\Jogging.jpg">
-                <img src="image\Hiking.jpg">
-                <img src="image\travel.jpg">
+                <img src="Sky.jpg">
+                <img src="Cooking.jpg">
+                <img src="Eating food.jpg">
+                <img src="Watching drama.jpg">
+                <img src="Music.jpg">
+                <img src="Jogging.jpg">
+                <img src="Hiking.jpg">
+                <img src="travel.jpg">
               </div>
             
         </div>
